erDiagram
    Relying-Party ||--|{ Grant : relying_party_id
    Relying-Party {
        String client_id
        String client_salt
        String registration_access_token
        String registration_client_uri
        String client_id_issued_at
        String client_secret
        datetime client_secret_expires_at
        String application_type
        List response_types
        List contacts
        String token_endpoint_auth_method
        List response_types
        List contacts
        String token_endpoint_auth_method
        List post_logout_redirect_uris
        String jwks_uri
        String frontchannel_logout_uri
        String frontchannel_logout_session_required
        String backchannel_logout_uri
        String grant_types
        List redirect_uris
    }
    User ||--o{ Grant : user_id
    User {
        string username
        string firstName
        string lastName
        string email
    }
    Grant {
        int user_id
        int relying_party
        String session_key
        String token_type
        JSon authentication_event
        menthod1()
    }
